--- a/asn1/CMakeLists.txt
+++ b/asn1/CMakeLists.txt
@@ -1,7 +1,6 @@
-cmake_minimum_required(VERSION 3.6)
 project(asn1)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -O")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -g")
 
 set(SOURCE_FILES main.cpp)
 add_executable(asn1 ${SOURCE_FILES})
