Added test binary

--- a/asn1/CMakeLists.txt
+++ b/asn1/CMakeLists.txt
@@ -4,3 +4,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -O3")
 
 set(SOURCE_FILES main.cpp)
 add_executable(asn1 ${SOURCE_FILES})
+
+set(SOURCE_FILES_TEST test.cpp)
+add_executable(asn1test ${SOURCE_FILES_TEST})
