--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -1,9 +1,16 @@
+cmake_minimum_required(VERSION 3.6.2)
 project(asn2)
 
-SET(CMAKE_CXX_FLAGS_DEBUG "... -lpthread")
-SET(CMAKE_CXX_FLAGS_RELEASE "... -lpthread")
+find_package(Boost COMPONENTS mpi REQUIRED)
+find_package(MPI REQUIRED)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
+include_directories(${MPI_INCLUDE_PATH})
+include_directories( ${Boost_INCLUDE_DIR} )
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
-add_executable(asn1 ${SOURCE_FILES})
+add_executable(asn2 ${SOURCE_FILES})
+target_link_libraries(asn2 ${MPI_LIBRARIES} ${Boost_LIBRARIES})
