--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.6.2)
 project(asn2)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/release")
 find_package(Boost COMPONENTS mpi REQUIRED)
 find_package(MPI REQUIRED)
 
