--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Boost COMPONENTS mpi serialization REQUIRED)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g") # -g is in default config
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3") # -O3 is in default config
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
 set(SOURCE_FILES main.cpp)
 add_executable(asn2 ${SOURCE_FILES})
