--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -9,9 +9,12 @@ set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/boost/build")
 set(Boost_NO_SYSTEM_PATHS ON)
 set(Boost_USE_STATIC_LIBS ON)
 
-set(MPI_CXX_COMPILER "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/bin/mpicc")
+set(MPI_CXX_COMPILER "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/bin/mpicxx")
 set(MPI_CXX_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/include")
 file(GLOB MPI_CXX_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/lib/*.so")
+set(MPI_C_COMPILER "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/bin/mpicxx")
+set(MPI_C_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/include")
+file(GLOB MPI_C_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/lib/*.so")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/mpich-3.2/build/include")
 
 find_package(MPI REQUIRED)
@@ -22,9 +25,8 @@ message("MPI " ${MPI_CXX_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g") # -g is in default config
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3") # -O3 is in default config
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -static-libstdc++ -static-libgcc -pthread")
 
 set(SOURCE_FILES main.cpp)
 add_executable(asn2 ${SOURCE_FILES})
-target_link_libraries(asn2 ${MPI_CXX_LIBRARIES})
-target_link_libraries(asn2 ${Boost_LIBRARIES})
+target_link_libraries(asn2 ${MPI_CXX_LIBRARIES} ${Boost_LIBRARIES})
