Added make shell

--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -6,12 +6,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/release")
 # set(Boost_USE_STATIC_LIBS ON)
 
 find_package(MPI)
-find_package(Boost COMPONENTS serialization)
+find_package(Boost COMPONENTS serialization mpi)
 
 if(NOT Boost_FOUND)
-  set(BOOST_ROOT "/usr/local/stow/boost_1_60_0/boost_1_60_0/")
-  find_package(Boost COMPONENTS serialization)
-  include_directories("/usr/lib/openmpi/include/")
+  set(BOOST_ROOT "/local/scratch/asn2/boost")
+  find_package(Boost COMPONENTS serialization mpi)
 endif()
 
 message("BOOST " ${Boost_LIBRARIES})
@@ -23,7 +22,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3") # -O3 is in defaul
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread ${STATIC_FLAGS}")
 
 file(GLOB_RECURSE MPI "${CMAKE_CURRENT_SOURCE_DIR}/mpi/*.cpp")
-set(SOURCE_FILES ${MPI} main.cpp)
+set(SOURCE_FILES main.cpp)
 
 add_executable(asn2 ${SOURCE_FILES})
-target_link_libraries(asn2 ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES})
+target_link_libraries(asn2 ${MPI_CXX_LIBRARIES} ${Boost_LIBRARIES})
