--- a/asn2/CMakeLists.txt
+++ b/asn2/CMakeLists.txt
@@ -12,8 +12,14 @@ message("MPI " ${MPI_CXX_LIBRARIES})
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g") # -g is in default config
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3") # -O3 is in default config
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES asn2.cpp)
 add_executable(asn2 ${SOURCE_FILES})
 target_link_libraries(asn2 ${Boost_LIBRARIES} ${MPI_CXX_LIBRARIES})
+
+set(SOURCE_FILES asn1.cpp)
+add_executable(asn1 ${SOURCE_FILES})
+
+set(SOURCE_FILES_TEST test.cpp)
+add_executable(sequential ${SOURCE_FILES_TEST})
